# freicar_project_sign_detect

./: .gitignore  README.md
freicar_aruco_detect/: .aruco_detect.py.swn  .aruco_detect.py.swo  .aruco_detect.py.swp  CMakeLists.txt  package.xml
freicar_aruco_detect/src/: aruco_detect.py
freicar_aruco_detect/src/lib/: utils.py
freicar_aruco_detection/: CMakeLists.txt  package.xml
freicar_aruco_detection/include/: freicar_aruco_detection_node.h
freicar_aruco_detection/src/: freicar_aruco_detection_node.cpp
freicar_mapping/: CMakeLists.txt  package.xml
freicar_mapping/src/: .mapping_node.py.swp  mapping_node.py  mapping_node_standalone.py
freicar_mapping/src/lib/: .deprojection.py.swp  deprojection.py  depth_processing.py  map.py  sign.py  utils.py
freicar_mapping/src/tests/: test_deprojection.py  test_sign_pose_computation.py
freicar_street_sign/: CMakeLists.txt  package.xml
freicar_street_sign/src/: .street_sign.py.swo  .street_sign.py.swp  street_sign_detection_node.py
freicar_traffic_sign_detect/gtsrb-to-coco/: .gitignore  download_dataset.sh  gtsrb-to-coco.py
freicar_traffic_sign_detect/labelme-to-coco/: .gitignore  labelme2coco.py
freicar_traffic_sign_detect/yolov7/: .gitignore  inference-ros-node.py  requirements.txt
freicar_traffic_sign_detect/yolov7/data/: freicar-1-2.yaml  freicar-1.yaml  freicar-2.yaml  freicar-gtsrb.yaml
